# ramesAI

./: README.md
automated_email_qa/: README.md  pyproject.toml
automated_email_qa/saved_rules/: Yanmar.json
automated_email_qa/src/automated_email_qa/: crew.py  main.py  streamlit_app.py
automated_email_qa/src/automated_email_qa/config/: agents.yaml  tasks.yaml
automated_email_qa/src/automated_email_qa/core/: dynamic_rules.py  qa_workflow.py
automated_email_qa/src/automated_email_qa/tools/: email_parser.py  universal_parser.py
email_qa/: README.md  pyproject.toml  report.md  streamlit_app.py
email_qa/qa_reports/: Yanmar_[Test]_Explore What Yanmar Can Do (1)_eml_20251003_131746.json  Yanmar_[Test]_Explore What Yanmar Can Do (1)_eml_20251003_143829.json  Yanmar_[Test]_Explore What Yanmar Can Do_eml_20251003_143009.json
email_qa/src/email_qa/: crew.py  main.py
email_qa/src/email_qa/config/: agents.yaml  tasks.yaml
email_qa/src/email_qa/rules/: engine.py
email_qa/src/email_qa/rules/clients/: yanmar.json
email_qa/src/email_qa/tools/: email_parser.py  link_validator.py  pdf_parser.py
email_qa/tests/: test_crew.py  test_email_parser.py  test_link_validator.py  test_link_validator_real.py  test_parse_real_email.py  test_parse_real_pdf.py  test_pdf_parser.py  test_rules_engine.py
email_qa/uploads/: The UTV choice that could save you money long-term (1).eml  [Test]_Explore What Yanmar Can Do (1).eml
